Trial/aks/sample/archive/akka.cluster.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akkadomain
  namespace: bccs
spec:
  selector:
    app: akka
  # clusterIP: None
  type: ClusterIP
  ports:
  - name: lighthouse01forpod1
    port: 4053
    targetPort: 4053
  - name: lighthouse02forpod1
    port: 9110
    targetPort: 9110
