Trial/aks/sample/archive/ingeress.dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccs-dev
  namespace: bccs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: bccs-app
          servicePort: 8080
        path: /(.*)
